# linux-getting-started

./: .gitignore  README.md  linux-getting-started-@hustcalm.odp  usefulLinks.md  wishList
makefile/makefile-by-examples/: Makefile-2  Makefile-4  README.md  factorial.cpp  hello.cpp
rec-books/: README.md
reference/shell/: bash-columbia_university.ppt
shell/write-linux-shell-scripts/: hello-bash.sh
shell/writing-a-shell-script-from-scratch/jazz/test/: README.md  SpecRunner.html
src/autotools/: README.md
src/autotools/helloworld_cc-0.5/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac
src/linux/advanced-linux-programming/ALP-listings/chapter-2/: Makefile
src/linux/advanced-linux-programming/ALP-listings/chapter-8/: sysinfo.c
src/makefile/makefile-by-examples/: Makefile-3  functions.h  main.cpp
src/shell/lsst/: README.md
src/shell/writing-a-shell-script-from-scratch/jazz/: README.md  jazz
src/shell/writing-a-shell-script-from-scratch/jazz/test/spec/: testSpec.js
src/shell/writing-a-shell-script-from-scratch/jazz/test/src/: test.js
