## Helloworld C++: an example project using Automake

AC_INIT([Helloworld C++], [0.5], [murrayc@openismus.com],
        [helloworld_cc], [http://www.openismus.com/documents/linux/automake/automake])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])

AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
